@@ -1,7 +1,7 @@
 Shell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.22"
+SupportV="0.1.23"
 
 ProgDir=$1
 shift
@@ -231,19 +231,19 @@ UsePerl()
 			local name=$2
 			local keep=$3
 			local project=${CodeProject}
-                        local cplArgs=""
-                        local TheBinDir
-                        local ERROR
-                        #Handle Project Dir
-                        case ${project} in
-                                none)
-                                        project=""
-                                        TheBinDir=${LangBin}
-                                        ;;
-                                *)
-                                        project="${project}/"
-                                        TheBinDir="${LangSrc}/${project}bin"
+			local cplArgs=""
+			local TheBinDir
+			local ERROR
+			#Handle Project Dir
+			case ${project} in
+				none)
+					project=""
+					TheBinDir=${LangBin}
 					;;
+				*)
+					project="${project}/"
+					TheBinDir="${LangSrc}/${project}bin"
+				;;
                         esac
 			case ${src} in
 				*${LangExt})
@@ -375,11 +375,24 @@ UsePerl()
 		Install)
 			bin=$1
 			BinFile="${bin%.*}"
+			local project=${CodeProject}
+			local TheBinDir
+			#Handle Project Dir
+			case ${project} in
+				none)
+					project=""
+					TheBinDir=${LangBin}
+					;;
+				*)
+					project="${project}/"
+					TheBinDir="${LangSrc}/${project}bin"
+					;;
+                        esac
 			#Make sure Binary exists
-			if [ -f "${LangBin}/${bin}" ]; then
+			if [ -f "${TheBinDir}/${bin}" ]; then
 				#Add command to Aliases
-				AddAlias "${BinFile}" "${LangRun} ${LangBin}/${bin}"
-			elif [ ! -f "${LangBin}/${bin}" ]; then
+				AddAlias "${BinFile}" "${LangRun} ${TheBinDir}/${bin}"
+			elif [ ! -f "${TheBinDir}/${bin}" ]; then
 				errorCode "install" "${bin}"
 			else
 				errorCode "noCode"
