@@ -1,7 +1,7 @@
 Shell=$(which bash)
 #!${Shell}
 
-SupportV="0.1.24"
+SupportV="0.1.25"
 
 ProgDir=$1
 shift
@@ -392,11 +392,24 @@ UsePython()
 		Install)
 			local bin=$1
 			local BinFile="${bin%.*}"
+			local project=${CodeProject}
+			local TheBinDir
+			#Handle Project Dir
+			case ${project} in
+				none)
+					project=""
+					TheBinDir=${LangBin}
+					;;
+				*)
+					project="${project}/"
+					TheBinDir="${LangSrc}/${project}bin"
+					;;
+			esac
 			#Make sure Binary exists
-			if [ -f "${LangBin}/${bin}" ]; then
+			if [ -f "${TheBinDir}/${bin}" ]; then
 				#Add command to Aliases
-				AddAlias "${BinFile}" "${LangRun} ${LangBin}/${bin}"
-			elif [ ! -f "${LangBin}/${bin}" ]; then
+				AddAlias "${BinFile}" "${LangRun} ${TheBinDir}/${bin}"
+			elif [ ! -f "${TheBinDir}/${bin}" ]; then
 				errorCode "install" "${bin}"
 			else
 				errorCode "noCode"
