@@ -1,1 +1,1 @@
-Java;sand;test.java
+Go;MyTest;test.go
