@@ -3,7 +3,7 @@
 #1st # = Overflow
 #2nd # = Additional features
 #3rd # = Bug/code tweaks/fixes
-Version=0.77.35
+Version=0.77.36
 
 #cl[ide] config
 #{
