@@ -1,2 +1,9 @@
 Added:
 	Compile and Run (car)
+
+Concept:
+	Managing different project types
+
+Bug Fixes:
+	"install" on projects and non-projects (issue: projects would not be installed in .bash_aliases)
+	"AddAlias.sh" was not finding "errorCode.sh"
